[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
langchain = "^0.1.14"
anthropic = "^0.23.1"
pinecone-client = "^3.2.2"
ebooklib = "^0.18"
fitz = "^0.0.1.dev2"
pandas = "^2.2.1"
tqdm = "^4.66.2"
langchain-community = "^0.0.32"
langchain-openai = "^0.1.3"
markdown = "^3.6"
cohere = "^5.2.5"
langchain-core = "^0.1.42"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"